
syntax = "proto3";
// captcha 验证码服务
package captcha;
option go_package = "cloud/service/captcha;captcha";


// CaptchaGenerateObject 数据对象
message CaptchaGenerateObject {
    // @inject_tag: db:"captcha_id" json:"captchaId"
    string captcha_id = 1;
    // @inject_tag: db:"captcha_image" json:"captchaImage"
	string captcha_image = 2;
}


// CaptchaVerifyObject 数据对象
message CaptchaVerifyObject {
    bool result = 1;
}

// CaptchaGenerateRequest 验证码生成请求
message CaptchaGenerateRequest{
}

// CaptchaGenerateResponse 验证码生成响应
message CaptchaGenerateResponse {
	int64 code = 1;
	string msg = 2;
	CaptchaGenerateObject data = 3;
}


// CaptchaVerifyRequest 验证码验证请求
message CaptchaVerifyRequest {
    // @inject_tag: db:"captcha_id" json:"captchaId"
    string captcha_id = 1;
    // @inject_tag: db:"captcha_code" json:"captchaCode"
	string captcha_code = 2;
}

// CaptchaVerifyResponse 验证码验证响应
message CaptchaVerifyResponse {
    int64 code = 1;
	string msg = 2;
	CaptchaVerifyObject data = 3;
}

// CaptchaService 验证码服务
service CaptchaService{
    rpc CaptchaGenerate(CaptchaGenerateRequest) returns (CaptchaGenerateResponse);
    rpc CaptchaVerify(CaptchaVerifyRequest) returns (CaptchaVerifyResponse);
}